syntax = "proto3";

package witwiz;

option go_package="witwiz/proto";

service WitWiz {
    rpc JoinGame(stream PlayerInput) returns (stream GameStateUpdate) {}
}

message PlayerInput {
    int32 player_id = 1;
    Action action = 2;
    enum Action {
        MOVE_UP = 0;
        MOVE_RIGHT = 1;
        MOVE_DOWN = 2;
        MOVE_LEFT = 3;
        SHOOT = 4;
    }
}

message GameStateUpdate {
    repeated PlayerState players = 1;
    repeated ProjectileState projectiles = 2;
    int32 your_player_id = 3;
}

message PlayerState {
    int32 player_id = 1;
    Vector2 position = 2;
    Vector2 velocity = 3;
    Vector2 acceleration = 4;
    BoundingBox boundingBox = 5;
    float maxSpeed = 6;
}

message ProjectileState {
    int32 projectile_id = 1;
    int32 owner_id = 2;
    Vector2 position = 3;
    Vector2 velocity = 4;
    BoundingBox boundingBox = 5;
    float maxSpeed = 6;
}

message Vector2 {
    float x = 1;
    float y = 2;
}

message BoundingBox {
    float width = 1;
    float height = 2;
}